Make the recipe content retrieval process more resilient and reliable
Adds try-catch blocks to handle Redis cache failures and uses `toList()` instead of `collect(Collectors.toList())` in BoardPostService.java.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 48d37a9e-f2db-47e6-b506-4050d7998f28
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5c663142-396c-4162-b66a-4f109913be33/3e149de3-cf01-4a45-8723-1b0d45a8e669.jpg